Fixed post overflow issue

--- a/sass/archive.scss
+++ b/sass/archive.scss
@@ -14,6 +14,7 @@ article.post {
   background-color: $color_white-dark;
   padding-bottom: 1px;
   margin: 0 auto;
+  max-width: 100%;
 
   * {
     flex: 0 0 auto;
